--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,12 +2,25 @@
 
 <aside aria-label="Sidebar" id="sidebar" class="d-flex flex-column align-items-end">
   <header class="profile-wrapper">
-    <a href="{{ '/' | relative_url }}" id="avatar" class="rounded-circle">
+    <a href="{{ '/' | relative_url }}"
+       id="avatar"
+       class="rounded-circle"
+       style="display:inline-block;
+          width:175px;
+          height:225px;
+          overflow:hidden;
+          border-radius:50%;
+          cursor:zoom-in;">
       {%- if site.avatar != empty and site.avatar -%}
         {%- capture avatar_url -%}
           {% include media-url.html src=site.avatar %}
         {%- endcapture -%}
-        <img src="{{- avatar_url -}}" width="112" height="112" alt="avatar" onerror="this.style.display='none'">
+      <img src="{{ avatar_url }}"
+           alt="avatar"
+           style="width:100%;
+                height:100%;
+                object-fit:cover;"
+           onerror="this.style.display='none'">
       {%- endif -%}
     </a>
 
